--- a/README
+++ b/README
@@ -1,6 +1,6 @@
 GRAVATARHTMLHELPER
 
-A HtmlHelper extension method for ASP.NET MVC
+A gravatar HtmlHelper extension method for ASP.NET MVC
 
 Standard:
 
