--- a/README
+++ b/README
@@ -1,19 +1,19 @@
-GRAVATARHTMLHELPER
+**GRAVATARHTMLHELPER**
 
-A gravatar HtmlHelper extension method for ASP.NET MVC 3
+A gravatar HtmlHelper extension method for ASP.NET MVC 3/4
 
-Standard:
+*Standard:*
 
 <%= Html.Gravatar("recipient@domain.com") %>
 
-With gravatar attributes:
+*With gravatar attributes:*
 
 <%= Html.Gravatar("recipient@domain.com", new { s = "90", d = "mm" } )%>
 
-With html attributes:
+*With html attributes:*
 
 <%= Html.Gravatar("recipient@domain.com", null, new { style = "border:1px solid #000" } )%>  
 
-With gravatar and html attributes:
+*With gravatar and html attributes:*
 
 <%= Html.Gravatar("recipient@domain.com", new { s = "90", d = "mm" }, new { style = "border:1px solid #000" } )%>
